--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
             "email": "hanxgen3@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
         "php": ">=5.3.0"
     },
